--- a/css/styles.css
+++ b/css/styles.css
@@ -429,6 +429,10 @@ div.wpcf7 .placeheld {
         .vc_custom_1425470118379 {
             margin-bottom: 0px !important;
         }
+        
+        .horizontal-block {
+        	padding-bottom: 60px;
+        }
 
 .upb_row_bg {
     /*border: 1px solid red;*/
